unblurred images and fixed padding issues

--- a/wp-content/themes/themetcb/style.css
+++ b/wp-content/themes/themetcb/style.css
@@ -61,6 +61,7 @@ h3 {
 
 .board_text {
   font-size: 10.5px;
+  margin-bottom: .3em!important;
 }
 
 
